README og versjonsnummer

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Kodeks
-Theme URI: http://snaprud.no/underscores/
+Bitbucket Theme URI: https://bitbucket.org/snaprud/kodeks-wp-theme
 Author: Kodeks
 Author URI: http://kodeks.no
 Description: Description
