--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Kodeks
 Bitbucket Theme URI: https://bitbucket.org/snaprud/kodeks-wp-theme
 Author: Kodeks
 Author URI: http://kodeks.no
-Description: Description
+Description: Kodeks hovedmal
 Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
