WordPress-update test

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ Theme Name: Kodeks
 Bitbucket Theme URI: https://bitbucket.org/snaprud/kodeks-wp-theme
 Author: Kodeks
 Author URI: http://kodeks.no
-Description: Kodeks hovedmal
-Version: 1.0.1
+Description: Kodeks WordPress hovedmal
+Version: 1.0.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: kodeks
