--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: Kodeks
-Bitbucket Theme URI: https://bitbucket.org/snaprud/kodeks-wp-theme
+GitHub Theme URI: https://github.com/snaprud/Kodeks-WP-theme
 Author: Kodeks
 Author URI: http://kodeks.no
 Description: Kodeks WordPress hovedmal
-Version: 1.0.7
+Version: 1.0.8
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: kodeks
